# git-gardener

./: .gardener.yml  .gitignore  CLAUDE.md  Cargo.toml  README.md  README_ja.md  flake.nix  justfile
.claude/: settings.local.json
completions/: git-gardener.bash  git-gardener.fish  git-gardener.zsh
docs/: development-progress.md  specification.md
scripts/: install-completions.sh
shell-init/: bash.sh  fish.fish  zsh.sh
src/: cli.rs  config.rs  error.rs  hooks.rs  lib.rs  main.rs
src/commands/: add.rs  cd.rs  clean.rs  completion.rs  config.rs  init.rs  list.rs  mod.rs  move.rs  prune.rs  pull_all.rs  remove.rs  shell_init.rs  tui.rs
src/git/: mod.rs  status.rs  worktree.rs
tests/: add_hooks_integration_test.rs  add_path_test.rs  cd_test.rs  clean_test.rs  config_set_test.rs  git_status_test.rs  hooks_test.rs  hooks_unit_test.rs  init_gardener_folder_test.rs  integration_test.rs  pull_all_git_integration_test.rs  pull_all_test.rs  simple_remove_test.rs  tui_action_execution_test.rs  tui_dialog_test.rs  tui_integration_test.rs  tui_navigation_test.rs  worktree_remove_test.rs
