[package]
name = "git-gardener"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Git worktree management tool"
license = "MIT"
repository = "https://github.com/username/git-gardener"
keywords = ["git", "worktree", "cli", "tool"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "git_gardener"
path = "src/lib.rs"

[[bin]]
name = "git-gardener"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
clap_complete = "4.5"

# Git operations
git2 = "0.18"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Path handling
directories = "5.0"
pathdiff = "0.2"

[dev-dependencies]
# Testing
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
rstest = "0.18"
